--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>Mifos X</title>
-  <base href="./"/>
+  <title>MIDAS - THE GOLDEN TOUCH</title>
+  <base href="."/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
-  <link rel="icon" type="image/png" href="assets/images/MifosX_logo.png" sizes="182x184">
+  <link rel="icon" type="image/png" href="assets/images/Midas_logo.png" sizes="182x184">
   <link rel="apple-touch-icon" type="image/png" href="apple-touch-icon.png" sizes="182x184"/>
   <link rel="manifest" href="manifest.json"/>
 
