--- a/src/index.html
+++ b/src/index.html
@@ -37,14 +37,14 @@
     window.addEventListener('load',function() { window.scrollTo(0, 1); });
   </script>
 
-  <mifosx-web-app>
+  <midas-web-app>
     <div class="loader-wrapper">
       <div class="bottom triangle"></div>
       <div class="top triangle"></div>
       <div class="left triangle"></div>
       <div class="right triangle"></div>
     </div>
-  </mifosx-web-app>
+  </midas-web-app>
 
   <!-- ParticlesJS -->
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
