--- a/src/index.html
+++ b/src/index.html
@@ -20,37 +20,48 @@
   <!-- <link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet"> -->
   <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet"> -->
 
+  <style>
+    .mat-row:nth-child(even) {
+      background-color: #d3d3d3;
+    }
+
+    .mat-row:nth-child(odd) {
+      background-color: #ffffff;
+    }
+  </style>
 </head>
 <body>
-  <!--[if lt IE 10]>
-    <p>
-      You are using an <strong>outdated</strong> browser.
-      Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
-    </p>
-  <![endif]-->
+<!--[if lt IE 10]>
+<p>
+  You are using an <strong>outdated</strong> browser.
+  Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
+</p>
+<![endif]-->
 
-  <noscript>
-    <p>
-      This page requires JavaScript to work properly. Please enable JavaScript in your browser.
-    </p>
-  </noscript>
+<noscript>
+  <p>
+    This page requires JavaScript to work properly. Please enable JavaScript in your browser.
+  </p>
+</noscript>
 
-  <script>
-    // This hides the address bar on mobile browsers
-    // https://developers.google.com/web/fundamentals/native-hardware/fullscreen/
-    window.addEventListener('load',function() { window.scrollTo(0, 1); });
-  </script>
+<script>
+  // This hides the address bar on mobile browsers
+  // https://developers.google.com/web/fundamentals/native-hardware/fullscreen/
+  window.addEventListener('load', function () {
+    window.scrollTo(0, 1);
+  });
+</script>
 
-  <midas-web-app>
-    <div class="loader-wrapper">
-      <div class="bottom triangle"></div>
-      <div class="top triangle"></div>
-      <div class="left triangle"></div>
-      <div class="right triangle"></div>
-    </div>
-  </midas-web-app>
+<midas-web-app>
+  <div class="loader-wrapper">
+    <div class="bottom triangle"></div>
+    <div class="top triangle"></div>
+    <div class="left triangle"></div>
+    <div class="right triangle"></div>
+  </div>
+</midas-web-app>
 
-  <!-- ParticlesJS -->
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<!-- ParticlesJS -->
+<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 </body>
 </html>
