--- a/src/index.html
+++ b/src/index.html
@@ -1,67 +1,64 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <title>MIDAS - THE GOLDEN TOUCH</title>
-  <base href="."/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="mobile-web-app-capable" content="yes">
+  <head>
+    <meta charset="utf-8" />
+    <title>MIDAS - THE GOLDEN TOUCH</title>
+    <base href="." />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
 
-  <!--<link rel="icon" type="image/x-icon" href="favicon.ico"/>-->
-  <link rel="icon" type="image/x-icon" href="assets/images/Midas-icon.png"/>
-  <link rel="icon" type="image/png" href="assets/images/Midas-Logo-01.png" sizes="184x184">
-  <link rel="apple-touch-icon" type="image/png" href="apple-touch-icon.png" sizes="184x184"/>
-  <link rel="manifest" href="manifest.json"/>
+    <!--<link rel="icon" type="image/x-icon" href="favicon.ico"/>-->
+    <link rel="icon" type="image/x-icon" href="assets/images/Midas-icon.png" />
+    <link rel="icon" type="image/png" href="assets/images/Midas-Logo-01.png" sizes="184x184" />
+    <link rel="apple-touch-icon" type="image/png" href="apple-touch-icon.png" sizes="184x184" />
+    <link rel="manifest" href="manifest.json" />
 
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Mono:300" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <!-- <link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet"> -->
-  <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Mono:300" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
+    <!-- <link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet"> -->
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet"> -->
 
-  <style>
-    .mat-row:nth-child(even) {
-      background-color: #d3d3d3;
-    }
+    <style>
+      .mat-row:nth-child(even) {
+        background: #cef0f5 ;
+      }
+      .mat-row:nth-child(odd) {
+        background-color:#fff ;
+      }
+    </style>
+  </head>
+  <body>
+    <!--[if lt IE 10]>
+      <p>
+        You are using an <strong>outdated</strong> browser. Please
+        <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
+      </p>
+    <![endif]-->
 
-    .mat-row:nth-child(odd) {
-      background-color: #ffffff;
-    }
-  </style>
-</head>
-<body>
-<!--[if lt IE 10]>
-<p>
-  You are using an <strong>outdated</strong> browser.
-  Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
-</p>
-<![endif]-->
+    <noscript>
+      <p>This page requires JavaScript to work properly. Please enable JavaScript in your browser.</p>
+    </noscript>
 
-<noscript>
-  <p>
-    This page requires JavaScript to work properly. Please enable JavaScript in your browser.
-  </p>
-</noscript>
+    <script>
+      // This hides the address bar on mobile browsers
+      // https://developers.google.com/web/fundamentals/native-hardware/fullscreen/
+      window.addEventListener("load", function () {
+        window.scrollTo(0, 1);
+      });
+    </script>
 
-<script>
-  // This hides the address bar on mobile browsers
-  // https://developers.google.com/web/fundamentals/native-hardware/fullscreen/
-  window.addEventListener('load', function () {
-    window.scrollTo(0, 1);
-  });
-</script>
+    <midas-web-app>
+      <div class="loader-wrapper">
+        <div class="bottom triangle"></div>
+        <div class="top triangle"></div>
+        <div class="left triangle"></div>
+        <div class="right triangle"></div>
+      </div>
+    </midas-web-app>
 
-<midas-web-app>
-  <div class="loader-wrapper">
-    <div class="bottom triangle"></div>
-    <div class="top triangle"></div>
-    <div class="left triangle"></div>
-    <div class="right triangle"></div>
-  </div>
-</midas-web-app>
-
-<!-- ParticlesJS -->
-<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-</body>
+    <!-- ParticlesJS -->
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  </body>
 </html>
