--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
   <!--<link rel="icon" type="image/x-icon" href="favicon.ico"/>-->
   <link rel="icon" type="image/x-icon" href="assets/images/Midas-icon.png"/>
-  <link rel="icon" type="image/png" href="assets/images/Midas-Logo-01.png" sizes="184x184"/>
+  <link rel="icon" type="image/png" href="src/assets/images/Midas-logo.png" sizes="184x184"/>
   <link rel="apple-touch-icon" type="image/png" href="apple-touch-icon.png" sizes="184x184"/>
   <link rel="manifest" href="manifest.json"/>
 
@@ -50,14 +50,16 @@
   });
 </script>
 
-<midas-web-app>
+<!--<midas-web-app>-->
   <div class="loader-wrapper">
-    <div class="bottom triangle"></div>
-    <div class="top triangle"></div>
-    <div class="left triangle"></div>
-    <div class="right triangle"></div>
+    <div class="triangle">
+      <img src="assets/images/Midas-logo.png" width="120" height="110">
+    </div>
+<!--    <div class="top triangle"></div>-->
+<!--    <div class="left triangle"></div>-->
+<!--    <div class="right triangle"></div>-->
   </div>
-</midas-web-app>
+<!--</midas-web-app>-->
 
 <!-- ParticlesJS -->
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
