open: -> midas-web-app

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
   });
 </script>
 
-<!--<midas-web-app>-->
+<midas-web-app>
   <div class="loader-wrapper">
     <div class="triangle">
       <img src="assets/images/Midas-logo.png" width="120" height="110">
@@ -59,7 +59,7 @@
 <!--    <div class="left triangle"></div>-->
 <!--    <div class="right triangle"></div>-->
   </div>
-<!--</midas-web-app>-->
+</midas-web-app>
 
 <!-- ParticlesJS -->
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
