--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
   <style>
     .mat-row:nth-child(even) {
-      background: #cef0f5;
+      background: #fafafa;
     }
 
     .mat-row:nth-child(odd) {
